--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.5.1",
     "http-proxy-middleware": "^2.0.6",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-router-dom": "^6.16.0",
     "react-select": "^5.7.7"
   },
   "devDependencies": {
