--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.5.1",
     "http-proxy-middleware": "^2.0.6",
+    "micro-cors": "^0.1.1",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
